--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,9 @@
-Add new user
+<form action='/users' method='post' accept-charset='UTF-8'>
+  <input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
+  <label for='email'>Email:</label>
+  <input type='email' id='email' name='email'><br><br>
+  <label for='username'>Username:</label>
+  <input type='text' id='username' name='username'><br><br>
+  <label for='password'>Password</label>
+  <input type='password' id='password' name='password'><br><br>
+</form>
