--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,4 +6,5 @@
   <input type='text' id='username' name='username'><br><br>
   <label for='password'>Password</label>
   <input type='password' id='password' name='password'><br><br>
+  <input type='submit' value='Save new user'>
 </form>
