--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<!--
 <form action='/users' method='post' accept-charset='UTF-8'>
   <input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
   <label for='email'>Email:</label>
@@ -8,3 +9,13 @@
   <input type='password' id='password' name='user[password]'><br><br>
   <input type='submit' value='Save new user'>
 </form>
+-->
+<%= form_tag('/users', method: 'post') do %>
+  <%= label_tag(:email, 'Email:') %>
+  <%= email_field_tag(:email) %><br><br>
+  <%= label_tag(:username) %>
+  <%= text_field_tag(:username) %><br><br>
+  <%= label_tag(:password, 'Password:') %>
+  <%= password_field_tag(:password) %><br><br>
+  <%= submit_tag('Save new user') %>
+<% end %>
