--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,6 +23,10 @@
 <% end %>
 -->
 
+<% @user.errors.full_messages.each do |message| %>
+  <div><%= message %></div>
+<% end %>
+
 <%= form_with model: @user do |form| %>
   <%= form.label :email, 'Email:' %>
   <%= form.email_field :email, placeholder: 'example@example.com' %><br><br>
